fix: modals, hints, txs

--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -269,6 +269,13 @@
     text-align: center;
   }
 
+  &-blockie {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+    border-radius: 100%;
+  }
+
   &-contacts-list {
     position: absolute;
     top: 200px;
@@ -311,6 +318,14 @@
     outline: none;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+
+    &:hover {
+      background-color: var(--copyblock-color);
+    }
+
+    &:active {
+      background-color: var(--border-color);
+    }
   }
 
   &-fee {
@@ -576,6 +591,14 @@ p.transaction-hash {
   .transaction {
     &-title {
       font-size: var(--xl-font-size);
+    }
+
+    &-blockie {
+      width: 20px;
+      height: 20px;
+      margin-right: 5px;
+      margin-bottom: 30px;
+      border-radius: 100%;
     }
   
     &-fee {
