fix: modal styles, double sign

--- a/src/index.scss
+++ b/src/index.scss
@@ -279,8 +279,7 @@ h2 {
 
 .wrong-network {
   width: 90%;
-  margin: 0 auto;
-  margin-bottom: 36px;
+  margin: 20px auto 36px;
   padding: 27px;
   color: var(--dark-color);
   text-align: center;
