--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -29,12 +29,7 @@
     margin: 58px auto 36px;
   }
 
-  & > h3 {
-    margin: 27px 0 72px;
-    color: var(--dark-color);
-    font-weight: var(--bold-font-weight);
-    font-size: var(--large-font-size);
-  }
+  
 
   & > p {
     color: var(--dark-color);
@@ -50,10 +45,18 @@
   max-width: 100vw;
   padding: 28px;
   color: var(--dark-color);
+  text-align: center;
   background-color: var(--modal-bg-color);
   border: 1px solid var(--border-color);
   border-radius: 8px;
   transition: opacity 200ms ease-in-out;
+
+  & > h3 {
+    margin: 27px 0 36px;
+    color: var(--dark-color);
+    font-weight: var(--bold-font-weight);
+    font-size: var(--large-font-size);
+  }
 
   & input {
     background-color: var(--copyblock-color);
