--- a/src/index.scss
+++ b/src/index.scss
@@ -418,11 +418,12 @@ h2 {
 }
 
 .logo-textless {
-  width: 63px;
-  height: 36px;
+  width: 300px;
+  height: 60px;
   margin: 45px 0 27px;
-  background-image: url(./images/logo.svg);
+  background-image: url(./images/logo_text.svg);
   background-repeat: no-repeat;
+  background-position: center;
   background-size: contain;
 }
 
@@ -499,6 +500,7 @@ h2 {
   & > a {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     width: 100%;
     height: 50%;
     padding-left: 18px;
@@ -506,6 +508,11 @@ h2 {
     text-align: left;
     background-color: var(--transparent);
     border: none;
+
+    p {
+      width: 100%;
+      text-align: center;
+    }
 
     &:hover {
       background-color: var(--copyblock-color);
@@ -734,6 +741,10 @@ body.dark > #root {
       background-repeat: no-repeat;
       background-size: 13px;
     }
+  }
+
+  .logo-textless {
+    background-image: url(./images/logo_text_dark.svg);
   }
 
   .custom-selector {
