--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -453,6 +453,26 @@ body.dark {
   }
 }
 
+.modal-container {
+  &.center {
+    .modal-wrapper {
+      top: 0;
+      left: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding-right: 10px;
+      perspective: 1000px;
+      perspective-origin: center;
+
+      .modal {
+        left: 50%;
+        transform: translateX(calc(-50% - 8px));
+      }
+    }
+  }
+}
+
 @media screen and (min-width: 600px) {
   .close-icon {
     top: 27px;
@@ -546,26 +566,6 @@ body.dark {
       width: calc(100% + 30px);
       margin-right: -15px;
       padding-right: 5px;
-    }
-  }
-}
-
-.modal-container {
-  &.center {
-    .modal-wrapper {
-      top: 0;
-      left: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding-right: 10px;
-      perspective: 1000px;
-      perspective-origin: center;
-
-      .modal {
-        left: 50%;
-        transform: translateX(-50%);
-      }
     }
   }
 }
