fix: client bugs

--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -158,6 +158,7 @@
     font-size: var(--sm-font-size);
     background-color: var(--transparent);
     border-bottom: 1px solid var(--border-color);
+    cursor: pointer;
     
     &.verified {
       background-color: var(--transparent);
