--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -14,7 +14,7 @@
   &-logo {
     width: 86px;
     height: 86px;
-    margin: 0 auto;
+    margin: 10px auto 30px;
     background-image: url(../../images/metamask.png);
     background-repeat: no-repeat;
     background-position: center;
