fix: login button

--- a/src/index.scss
+++ b/src/index.scss
@@ -405,7 +405,7 @@ h2 {
     background-color: var(--links-color);
   }
 
-  & > span {
+  .send-icon {
     display: block;
     width: 22px;
     height: 22px;
