fix: logo< types

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,7 +9,7 @@
     width: 150px;
     height: 30px;
     margin-top: 5px;
-    background-image: url(../../images/logo_text.svg);
+    background-image: url(../../images/LogotypeLight.svg);
     background-repeat: no-repeat;
   }
 
