--- a/src/index.scss
+++ b/src/index.scss
@@ -421,7 +421,7 @@ h2 {
   width: 300px;
   height: 60px;
   margin: 45px 0 27px;
-  background-image: url(./images/logo_text.svg);
+  background-image: url(./images/LogotypeLight.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
