add: success checkmark

--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -762,3 +762,8 @@ p.transaction-hash {
   height: 50px;
   transform: rotate(-90deg);
 }
+
+.success-lottie-checkmark {
+  display: inline-block;
+  margin: auto;
+}
