fix: refreshing tsx list fix: lottie-player layout

--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -764,6 +764,7 @@ p.transaction-hash {
 }
 
 .success-lottie-checkmark {
-  display: inline-block;
-  margin: auto;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
 }
