--- a/src/index.scss
+++ b/src/index.scss
@@ -192,6 +192,7 @@ button {
     height: 26px;
     margin-top: 10px;
     color: var(--delete-color);
+    font-size: var(--md-font-size);
     background-color: var(--transparent);
     border: none;
     border-radius: 13px;
