--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -58,6 +58,10 @@
   border-radius: 8px;
   transition: opacity 200ms ease-in-out;
 
+  &-instructions {
+    margin-bottom: 40px;
+  }
+
   & > h3 {
     margin: 27px 0 36px;
     color: var(--dark-color);
