feat: beta font to sm

--- a/src/index.scss
+++ b/src/index.scss
@@ -81,7 +81,7 @@ body.dark {
     margin-left: 10px;
     color: var(--delete-color);
     font-weight: var(--semibold-font-weight);
-    font-size: var(--md-font-size);
+    font-size: var(--sm-font-size);
   }
 }
 
