feat: add fontawesome

--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -56,6 +56,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 50px;
   padding: 15px;
   color: var(--info-message-text-color);
   background-color: var(--info-message-color);
