fix: account change, styles, minor bugs

--- a/src/index.scss
+++ b/src/index.scss
@@ -299,6 +299,7 @@ h2 {
     right: 20px;
     min-width: 120px;
     min-height: 30px;
+    max-height: 40px;
     padding: 5px 10px;
     color: var(--dark-color);
     background-color: var(--modal-bg-color);
