--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -374,6 +374,12 @@
     word-wrap: break-word;
   }
 
+  &-date {
+    margin-left: 18px;
+    color: var(--hints-color);
+    font-size: var(--sm-font-size);
+  }
+
   &-wrapper {
     position: relative;
     display: flex;
@@ -386,6 +392,7 @@
   }
 
   &-hash {
+    align-self: flex-start;
     margin-bottom: 10px;
     margin-left: 54px;
     color: var(--dark-color);
