--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -345,9 +345,9 @@
   &-done, &-verifying {
     position: relative;
     display: block;
-    min-width: 15px;
-    min-height: 15px;
-    background-image: url(../../images/success.svg);
+    min-width: 50px;
+    min-height: 50px;
+    background-image: url(../../images/1.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -360,6 +360,10 @@
       width: auto; 
       padding: 10px;
       text-align: center;
+
+      &.wide {
+        min-width: 250px;
+      }
     }
 
     &:hover .tooltip { 
@@ -373,7 +377,7 @@
   }
 
   &-verifying {
-    background-image: url(../../images/verifying.svg);
+    background-image: url(../../images/commited_new.svg);
   }
 }
 
