--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -29,6 +29,7 @@
     z-index: 2;
     width: 18px;
     height: 18px;
+    margin-right: 10px;
     animation: rotate 2s linear infinite;
     
     & .path {
