fix(scss): tooltip layout

--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -769,6 +769,7 @@ p.transaction-hash {
       width: auto; 
       padding: 10px;
       color: var(--dark-color);
+      white-space: pre;
       text-align: center;
     }
 
