fix: priority fixes

--- a/src/index.scss
+++ b/src/index.scss
@@ -798,6 +798,10 @@ body.dark > #root {
     background-image: url(./images/arrow-back-dark.svg);
   }
 
+  .beta-text {
+    color: var(--links-color);
+  }
+
   .withdraw-button {
     & > span {
       margin-top: 4px;
