--- a/src/index.scss
+++ b/src/index.scss
@@ -833,8 +833,9 @@ input[type='radio']:focus + .contact-manage {
   right: 40px;
   z-index: 10000;
   display: block;
-  width: 200px;
-  height: 70px;
+  width: auto;
+  min-width: 200px;
+  max-width: 300px;
   padding: 10px;
   text-align: center;
   background: var(--modal-bg-color);
