--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -409,6 +409,9 @@
 
 
 .transaction-history {
+  display: flex;
+  align-items: center;
+
   &.transfer, &.deposit, &.withdraw {
     width: 36px;
     height: 36px;
@@ -440,6 +443,7 @@
     margin-left: 18px;
     color: var(--dark-color);
     font-size: var(--xl-font-size);
+    line-height: var(--xl-font-size);
     word-wrap: break-word;
   }
 
@@ -464,7 +468,7 @@
     align-self: flex-start;
     margin-left: 18px;
     color: var(--dark-color);
-    font-size: var(--md-font-size);
+    font-size: var(--xl-font-size);
   }
 
   &-left {
