--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -406,6 +406,7 @@
     &-amount {
       color: var(--dark-color);
       font-size: var(--xl-font-size);
+      word-break: break-word;
     }
 
     &.contacts {
@@ -765,6 +766,10 @@ p.transaction-hash {
   position: relative;
   width: 50px;
   height: 50px;
+
+  .spinner-small {
+    margin-left: 10px;
+  }
   
   & .tooltip {
       bottom: 50px; 
