--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -217,7 +217,7 @@
   }
 
   &.Send {
-    background-image: url(../../images/send.svg);
+    background-image: url(../../images/send_white.svg);
 
     &.false{
       background-image: url(../../images/send_disable.svg);
