--- a/src/index.scss
+++ b/src/index.scss
@@ -460,7 +460,7 @@ h2 {
     width: 22px;
     height: 22px;
     margin-right: 10px;
-    background-image: url(./images/send.svg);
+    background-image: url(./images/send_white.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
