feat: new unlocking appearence, bugfixes

--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -282,6 +282,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      width: 100px;
     }
 
     &-send {
