fix: styles and burner wallet fixes

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -195,6 +195,8 @@
         margin-left: 0;
         padding: 5px 10px;
         color: var(--dark-color);
+        font-size: var(--sm-font-size);
+        font-family: var(--font-family);
         background-color: var(--transparent);
         border: none;
         border-radius: 5px;
