fix: wallets, contacts, styles etc

--- a/src/components/Wallets/Wallets.scss
+++ b/src/components/Wallets/Wallets.scss
@@ -78,7 +78,7 @@
 }
 
 .withdraw-button {
-  color: var(--hints-color);
+  color: var(--button-bg-color);
 
   & > span {
     background: url(../../images/mdi_arrow_downward.svg);
