--- a/src/components/Wallets/Wallets.scss
+++ b/src/components/Wallets/Wallets.scss
@@ -78,11 +78,15 @@
 }
 
 .withdraw-button {
+  padding-left: 28px;
   color: var(--button-bg-color);
 
   & > span {
-    background: url(../../images/mdi_arrow_downward.svg);
-    background-size: 20px;
+    display: block;
+    width: 15px;
+    height: 2px;
+    margin-left: 8px;
+    background-color: var(--button-bg-color);
   }
 
   &:hover {
@@ -91,10 +95,14 @@
   }
 
   &:active {
-    color: var(--hints-color-active);
+    color: var(--links-color);
 
     & > span {
-      background: url(../../images/mdi_arrow_downward_active.svg);
+      display: block;
+      width: 15px;
+      height: 2px;
+      margin-left: 8px;
+      background-color: var(--links-color);
     }
   }
 }
@@ -131,6 +139,9 @@
 
     & > span {
       background: url(../../images/deposit_active.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
     }
   }
 }
