--- a/src/index.scss
+++ b/src/index.scss
@@ -909,11 +909,10 @@ body.dark > #root {
     }
 
     &.Withdraw {
-      background-image: url(./images/mdi_arrow_downward_dark.svg);
-      background-size: 17px;
+      background-color: var(--button-text-color);
 
       &.false {
-        background-image: url(./images/mdi_arrow_downward_dark_disable.svg);
+        background-color: var(--hints-color);
       }
     }
   }
