--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -79,6 +79,13 @@
   }
 }
 
+// overflow-y: scroll;
+// max-height: 70vh;
+// width: calc(100% + 30px);
+// margin-right: -15px;
+// padding-right: 5px;
+// overflow-x: hidden;
+
 .datalist-balance {
   width: 100%;
   margin-bottom: 0;
@@ -93,7 +100,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 90vw;
+    width: 100%;
     max-width: 505px;
     margin-top: 16px;
     padding: 27px 0 22px;
