--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -159,6 +159,15 @@
     }
   }
 
+  &.error {
+    min-height: 135px;
+    padding-top: 54px;
+
+    & > p {
+      word-break: break-all;
+    }
+  }
+
   &.external-wallet-instructions {
     padding: 25px 0 25px 0;
     overflow-x: hidden;
@@ -169,10 +178,10 @@
       padding: 0 50px 0 30px; 
       overflow-x: hidden;
       overflow-y: scroll;
-
-      & > h3 {
+  
+      & > h3, p {
         text-align: left;
-      }
+      } 
     }
   }
 
@@ -180,15 +189,6 @@
     width: calc(100% - 32px);
     padding: 16px;
     text-align: center;
-  }
-
-  &.error {
-    min-height: 135px;
-    padding-top: 54px;
-
-    & > p {
-      word-break: break-all;
-    }
   }
 
   &.change-name {
