--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -100,6 +100,10 @@
     background-color: var(--modal-bg-color);
     border-radius: 5px;
 
+    &.external {
+      padding: 27px 0 0;
+    }
+
     & > .cta-wrapper {
       width: 100%;
       padding: 0 25px;
@@ -158,6 +162,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    max-width: 505px;
     height: 72px;
     padding: 22px;
     color: var(--dark-color);
